# serializer version: 1
# name: test_dynamic_new_devices[light.mock_classicledcontrol_e_channel_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'daycl_mode',
      ]),
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_classicledcontrol_e_channel_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel 0',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'channel',
    'unique_id': '00:00:00:00:00:01_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_dynamic_new_devices[light.mock_classicledcontrol_e_channel_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 26,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'effect': 'daycl_mode',
      'effect_list': list([
        'daycl_mode',
      ]),
      'friendly_name': 'Mock classicLEDcontrol+e Channel 0',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_classicledcontrol_e_channel_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig0][light.mock_classicledcontrol_e_channel_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'daycl_mode',
      ]),
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_classicledcontrol_e_channel_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel 0',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'channel',
    'unique_id': '00:00:00:00:00:01_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig0][light.mock_classicledcontrol_e_channel_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 26,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'effect': 'daycl_mode',
      'effect_list': list([
        'daycl_mode',
      ]),
      'friendly_name': 'Mock classicLEDcontrol+e Channel 0',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_classicledcontrol_e_channel_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig1][light.mock_classicledcontrol_e_channel_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'daycl_mode',
      ]),
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_classicledcontrol_e_channel_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel 1',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'channel',
    'unique_id': '00:00:00:00:00:01_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig1][light.mock_classicledcontrol_e_channel_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 99,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'effect': 'daycl_mode',
      'effect_list': list([
        'daycl_mode',
      ]),
      'friendly_name': 'Mock classicLEDcontrol+e Channel 1',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_classicledcontrol_e_channel_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig2][light.mock_classicledcontrol_e_channel_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'daycl_mode',
      ]),
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_classicledcontrol_e_channel_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel 0',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'channel',
    'unique_id': '00:00:00:00:00:01_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig2][light.mock_classicledcontrol_e_channel_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 26,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'effect': 'daycl_mode',
      'effect_list': list([
        'daycl_mode',
      ]),
      'friendly_name': 'Mock classicLEDcontrol+e Channel 0',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_classicledcontrol_e_channel_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig2][light.mock_classicledcontrol_e_channel_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'daycl_mode',
      ]),
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_classicledcontrol_e_channel_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel 1',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'channel',
    'unique_id': '00:00:00:00:00:01_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_classic_led_ctrl[tankconfig2][light.mock_classicledcontrol_e_channel_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 99,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'effect': 'daycl_mode',
      'effect_list': list([
        'daycl_mode',
      ]),
      'friendly_name': 'Mock classicLEDcontrol+e Channel 1',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_classicledcontrol_e_channel_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
